test-cases/final-dump/call_unknown.exp
Error detected during type checking of module(s) call_unknown
final-dump/call_unknown.wybe:1:26: proc nonexistent_proc unknown in proc foo
