test-cases/final-dump/call_unknown.wybe
def foo(x:int,?y:int)  { nonexistent_proc(x,?y) }
